--- a/SPRING-ANGULAR/Jenkinsfile
+++ b/SPRING-ANGULAR/Jenkinsfile
@@ -1,5 +1,26 @@
-node{
-stage("checkout"){
-checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[credentialsId: 'gitUser', url: 'https://github.com/pradyumna1979/spring-integration-adapter.git']]])
-}
+node {
+    stage('SCM Checkout') {
+         checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[credentialsId: 'gitUser', url: 'https://github.com/pradyumna1979/spring-integration-adapter.git']]])
+
+    }
+    stage('Build') {
+        if(isUnix()){
+        echo 'Unix'
+          // get Gradle HOME value
+         
+         //  run Gradle to execute compile and unit testing
+          sh 'maven clean build -x test'
+        }else{
+        bat 'maven clean build -x test'
+        }
+    }
+    stage('TEST'){
+        echo 'Test Done'
+    }
+    stage('Sonar Check'){
+        echo 'Sonar done'
+    }
+    stage('Deploy'){
+            echo 'Deploy done'
+    }
 }
